--- a/course-info-server/pom.xml
+++ b/course-info-server/pom.xml
@@ -60,5 +60,11 @@
             <version>${jersey.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>2.13.3</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
