--- a/course-info-server/pom.xml
+++ b/course-info-server/pom.xml
@@ -66,5 +66,10 @@
             <version>2.13.3</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jul-to-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
 </project>
